# levenshtein_lite

./: Cargo.toml  LICENSE  README.md
benches/: bench.rs
etc/: python_impl.py
src/: levenshtein_automata.rs  lib.rs
